@@ -167,6 +167,8 @@ Electron-phonon coefficients for Al
   outdir='$TMP_DIR/',
   fildyn='al.dyn',
   electron_phonon='interpolated',
+  el_ph_sigma=0.005, 
+  el_ph_nsigma=10,
   trans=.true.,
   ldisp=.true.
   nq1=4, nq2=4, nq3=4
